--- a/index.html
+++ b/index.html
@@ -7,12 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <img id="logo" src="logo.avif" alt="Next Step Navigator logo">
-        <a href="">Home</a>
-        <a href="">Services</a>
-        <a href="">About Us</a>
-        <a href="">Contact Us</a>
+    <header>
+        <div id="navbar">
+            <img id="logo" src="logo.avif" alt="Next Step Navigator logo">
+            <a href="">Home</a>
+            <a href="">Services</a>
+            <a href="">About Us</a>
+            <a href="">Contact Us</a>
+            <button id="signin">Sign in</button>
+        </div>
+    </header>
+    <div id="main"><br><br><br><br><br><br><br><br>
+        <h1>
+            Get Right Career Options With Next Step Navigator
+        </h1><br>
+        <hr><br><br>
+        <p>Discover you talent and passion</p><br><br><br>
+        <button id="start">Get Started</button>
+    </div>
+    <div id="image">
     </div>
 </body>
 </html>
