--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
         <h1>
             Get Right Career Options With Next Step Navigator
         </h1><br>
-        <hr><br><br>
-        <p>Discover you talent and passion</p><br><br><br>
+        <hr>
+        <br><br>
+        <marquee  behavior="alternate"> 
+            <pre>Discover your talent and passion           Implement your career plan rationally</pre>
+        </marquee><br><br><br>
         <button id="start">Get Started</button>
     </div>
-    <div id="image">
-    </div>
+        <div id="image"></div>
 </body>
 </html>
