--- a/index2.html
+++ b/index2.html
@@ -35,6 +35,9 @@
 
   <div id="image-wrapper">
     <img src="img/Home image 3.avif" alt="Career Image" />
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fphotos%2Fcareer-ladder&psig=AOvVaw29oweuKl4frpF9ROuySk5O&ust=1759566835056000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCJCntrXPh5ADFQAAAAAdAAAAABAL" alt="">
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.forbes.com%2Fsites%2Fcarolinecastrillon%2F2023%2F05%2F21%2Fhow-to-forge-a-career-path-in-your-organization%2F&psig=AOvVaw29oweuKl4frpF9ROuySk5O&ust=1759566835056000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCJCntrXPh5ADFQAAAAAdAAAAABAf" alt="">
+    <img src="https://www.google.com/imgres?q=career%20related%20images&imgurl=https%3A%2F%2Fresources.finalsite.net%2Fimages%2Ff_auto%2Cq_auto%2Fv1714671305%2Fpittsfordschoolsorg%2Fj7cekygt1jwehunpzoqx%2FCareers.jpg&imgrefurl=https%3A%2F%2Fmhs.pittsfordschools.org%2Fmhs-departments%2Fcounseling%2Fwelcome-to-mhs-counseling%2Fcareer-related-links&docid=JFNYs7T2jstH3M&tbnid=5P19aRFyXbHUVM&vet=12ahUKEwiDttqxz4eQAxXCzjgGHdUTGF8QM3oECCMQAA..i&w=400&h=400&hcb=2&ved=2ahUKEwiDttqxz4eQAxXCzjgGHdUTGF8QM3oECCMQAA" alt="">
   </div>
 
   <div class="newline">
